--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lazy-static-include"
-version = "1.1.2"
+version = "1.1.3"
 authors = ["Magic Len <len@magiclen.org>"]
 repository = "https://github.com/magiclen/lazy-static-include"
 homepage = "https://magiclen.org/lazy-static-include"
@@ -16,3 +16,6 @@ appveyor = { repository = "magiclen/lazy-static-include", branch = "master", ser
 
 [dependencies]
 lazy_static = "1.1"
+
+[features]
+benchmark = []
