--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lazy-static-include"
-version = "1.3.1"
+version = "2.0.0"
 authors = ["Magic Len <len@magiclen.org>"]
 repository = "https://github.com/magiclen/lazy-static-include"
 homepage = "https://magiclen.org/lazy-static-include"
@@ -15,11 +15,17 @@ travis-ci = { repository = "magiclen/lazy-static-include", branch = "master" }
 appveyor = { repository = "magiclen/lazy-static-include", branch = "master", service = "github" }
 
 [dependencies]
-lazy_static = "1.1"
+lazy_static = "1.3"
+syn = {version = "0.15.31", features = ["parsing", "full"], optional = true}
+starts-ends-with-caseless = {version = "0.2.1", optional = true}
 
 [dev-dependencies]
 criterion = "0.2.5"
-serde_json = "1.0.33"
+serde_json = "1.0"
+
+[features]
+default = ["starts-ends-with-caseless", "syn"]
+no_std = []
 
 [[bench]]
 name = "bench"
