--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ syn = {version = "0.15.31", features = ["parsing", "full", "extra-traits"], opti
 starts-ends-with-caseless = {version = "0.2.1", optional = true}
 
 [dev-dependencies]
-criterion = "0.2.5"
+bencher = "0.1.5"
 serde_json = "1.0"
 
 [features]
