--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "lazy-static-include"
-version = "2.1.1"
+version = "2.2.0"
 authors = ["Magic Len <len@magiclen.org>"]
 repository = "https://github.com/magiclen/lazy-static-include"
 homepage = "https://magiclen.org/lazy-static-include"
 keywords = ["lazy", "macro", "static", "include"]
-categories = ["no-std", "memory-management", "rust-patterns"]
+categories = ["memory-management", "rust-patterns"]
 description= "This crate provides `lazy_static_include_bytes` and `lazy_static_include_str` macros to replace `include_bytes` and `include_str` macros."
 readme = "README.md"
 license = "MIT"
@@ -16,16 +16,12 @@ branch = "master"
 
 [dependencies]
 lazy_static = "1.3"
-syn = {version = "0.15.31", features = ["parsing", "full", "extra-traits"], optional = true}
-starts-ends-with-caseless = {version = "0.2.1", optional = true}
+syn = {version = "0.15", features = ["parsing", "full", "extra-traits"]}
+starts-ends-with-caseless = "0.2.0"
 
 [dev-dependencies]
 bencher = "0.1.5"
 serde_json = "1.0"
-
-[features]
-default = ["starts-ends-with-caseless", "syn"]
-no_std = []
 
 [[bench]]
 name = "bench"
