--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "lazy-static-include"
-version = "2.2.0"
+version = "2.2.1"
 authors = ["Magic Len <len@magiclen.org>"]
+edition = "2018"
 repository = "https://github.com/magiclen/lazy-static-include"
 homepage = "https://magiclen.org/lazy-static-include"
 keywords = ["lazy", "macro", "static", "include"]
@@ -17,11 +18,12 @@ branch = "master"
 [dependencies]
 lazy_static = "1.3"
 syn = {version = "0.15", features = ["parsing", "full", "extra-traits"]}
-starts-ends-with-caseless = "0.2.0"
+starts-ends-with-caseless = "0.5"
 
 [dev-dependencies]
 bencher = "0.1.5"
 serde_json = "1.0"
+assert_approx_eq = "1.1"
 
 [[bench]]
 name = "bench"
