--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,15 @@ categories = ["memory-management", "rust-patterns"]
 description= "This crate provides `lazy_static_include_bytes` and `lazy_static_include_str` macros to replace `include_bytes` and `include_str` macros."
 readme = "README.md"
 license = "MIT"
+include = ["src/**/*", "Cargo.toml", "benches/bench.rs"]
 
 [badges.travis-ci]
 repository = "magiclen/lazy-static-include"
 branch = "master"
 
 [dependencies]
-lazy_static = "1.3"
-syn = {version = "1", features = ["parsing", "full", "extra-traits"]}
+lazy_static = "1.4"
+syn = {version = "1", features = ["full"]}
 starts-ends-with-caseless = "0.5"
 
 [dev-dependencies]
