--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "lazy-static-include"
-version = "3.1.1"
+version = "3.1.2"
 authors = ["Magic Len <len@magiclen.org>"]
-edition = "2018"
+edition = "2021"
 repository = "https://github.com/magiclen/lazy-static-include"
 homepage = "https://magiclen.org/lazy-static-include"
 keywords = ["lazy", "macro", "static", "include"]
@@ -21,6 +21,8 @@ syn = { version = "1", features = ["full"] }
 bencher = "0.1.5"
 serde_json = "1.0"
 assert_approx_eq = "1.1"
+
+slash-formatter = "3.1.3"
 
 [[bench]]
 name = "bench"
