--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "lazy-static-include"
 version = "3.1.3"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2021"
+rust-version = "1.56"
 repository = "https://github.com/magiclen/lazy-static-include"
 homepage = "https://magiclen.org/lazy-static-include"
 keywords = ["lazy", "macro", "static", "include"]
@@ -20,7 +21,7 @@ syn = { version = "1", features = ["full"] }
 [dev-dependencies]
 bencher = "0.1.5"
 serde_json = "1.0"
-assert_approx_eq = "1.1"
+assert-eq-float = "0.1"
 
 slash-formatter = "3.1.3"
 
