fix GitHub actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,8 @@ jobs:
           - macos-latest
           - windows-latest
         toolchain:
-          - 1.56
+          - stable
+          - nightly
         features:
           -
     name: Test ${{ matrix.toolchain }} on ${{ matrix.os }} (${{ matrix.features }})
